refactor: user routes
